feat: md3 build time plugin

--- a/web/src/styles/globals.scss
+++ b/web/src/styles/globals.scss
@@ -1,5 +1,1 @@
-$primary: #ff4136;
-$danger: #ff4136;
-$body-bg: white;
-$primary-border-subtle: red;
-@import "./md3-theme-builder.scss";
+@import "./md3-bootstrap.theme.scss";
