--- a/web/src/styles/md3-bootstrap.theme.scss
+++ b/web/src/styles/md3-bootstrap.theme.scss
@@ -1,5 +1,5 @@
 $primary: #855400;
-$body-bg: #F6ECE4;
+$body-bg: #FFF8F4;
 $body-color: #1F1B16;
 $border-color: #D4C4B5;
 @import "~bootstrap/scss/bootstrap";
